Resposive mobile : rem, flex-direccion, @media

--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@ body {
     justify-content: center;
     align-items: center;
     padding: 40px 0 0;
+    flex-direction: row; 
 }
+
 
 /* Sección de entrada */
 .input-section {
@@ -57,7 +59,7 @@ body {
 
 /* Títulos */
 .main-title {
-    font-size: 48px;
+    font-size: 3rem;
     font-family: "Merriweather", serif;
     font-weight: 900;
     font-style: italic;
@@ -66,7 +68,7 @@ body {
 
 .section-title {
     font-family: "Inter", serif;
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
     color: var(--color-primary);
     margin: 10px 0;
@@ -87,7 +89,7 @@ body {
     padding: 10px;
     border: 2px solid #000;
     border-radius: 25px 0 0 25px;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .button-container {
@@ -99,7 +101,7 @@ body {
 .input-title {
     flex: 1;
     padding: 10px 15px;
-    font-size: 16px;
+    font-size: 1rem;
     border: 2px solid #333;
     border-right: none;
     border-radius: 25px 0 0 25px;
@@ -111,7 +113,7 @@ body {
 button {
     padding: 15px 30px;
     font-family: "Inter", sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     border: 2px solid #000;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -134,14 +136,14 @@ ul {
     list-style-type: none;
     color: var(--color-text);
     font-family: "Inter", sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     margin: 20px 0;
 }
 
 .result-list {
     margin-top: 15px;
     color: #05DF05;
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: bold;
     text-align: center;
 }
@@ -154,7 +156,7 @@ ul {
     padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-button);
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .button-draw img {
@@ -173,7 +175,7 @@ ul {
     padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-text);
-    font-size: 16px;
+    font-size: 1rem;
     margin-top: 15px;
 }
 
@@ -184,4 +186,18 @@ ul {
 .button-reset:hover {
     background-color: var(--color-button-hover2);
  }
+
+
+/* Resposive mobile*/
+
+@media (max-width: 501px) {
+    .header-banner {
+        flex-direction: column;
+    }
+    .img_amigo_secreto {  
+        width: 50%;
+    }
+ }
+
+
 
